--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discordie": ">=0.0.8",
     "lame": "^1.2.3",
     "pcm-volume": "^1.0.0",
-    "spotify-web": "git+https://github.com/CoDEmanX/node-spotify-web.git#patch-1"
+    "request": "^2.67.0",
+    "spotify-web": "git+https://github.com/Laberbear/node-spotify-web.git#mergePullrequests"
   }
 }
