--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/voice": "^0.16.0",
+    "@discordjs/voice": "^0.16.1",
     "@google-cloud/text-to-speech": "^3.3.1",
     "async": "^1.5.0",
     "discord.js": "^14.13.0",
     "express": "^4.18.1",
     "ffmpeg-stream": "^0.7.0",
     "fluent-ffmpeg": "^2.1.2",
-    "libsodium-wrappers": "^0.7.9",
+    "libsodium-wrappers": "^0.7.13",
     "memfs": "^3.3.0",
     "node-fetch": "^2.6.1",
     "node-gyp": "^10.0.1",
@@ -45,5 +45,6 @@
     "eslint-plugin-jsdoc": "^48.0.4",
     "jest": "^29.5.0",
     "nodemon": "^3.0.1"
-  }
+  },
+  "packageManager": "pnpm@8.14.3+sha512.c3ed80eb583be3e2b7ef31eb96b8b9cfaa0503e5d44ec717514120b5187b2f933736e9038c51a5a23ad582790ba41d4ab784618c89fa7e2365f6665685d612ee"
 }
