--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "NODE_OPTIONS=--unhandled-rejections=warn jest --watch",
-    "lint": "eslint . --fix",
+    "lint": "dprint fmt && eslint . --fix",
     "dev": "nodemon app.js",
+    "devTest": "nodemon tests/devTest.js",
     "deploy": "rm -rf ../temp-deploy && mkdir ../temp-deploy && cp -R ./ ../temp-deploy && rm -rf ../temp-deploy/node_modules && scp -r /home/winbuntu/private/node-discordbots/temp-deploy/* pi@smartpi:/home/pi/node-discordbot"
   },
   "engines": {
@@ -15,34 +16,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.1",
     "@google-cloud/text-to-speech": "^3.3.1",
     "async": "^1.5.0",
     "discord.js": "^14.13.0",
     "express": "^4.18.1",
-    "ffmpeg-stream": "^0.7.0",
     "fluent-ffmpeg": "^2.1.2",
     "libsodium-wrappers": "^0.7.13",
-    "memfs": "^3.3.0",
     "node-fetch": "^2.6.1",
-    "node-gyp": "^10.0.1",
-    "node-lame": "^1.3.2",
-    "node-opus": "^0.3.3",
     "pcm-volume": "^1.0.0",
     "request": "^2.67.0",
     "socket.io": "^4.5.2",
     "yt-dlp-wrap": "^2.3.12",
-    "ytdl-core": "^4.11.5",
-    "ytpl": "^2.3.0",
-    "ytsr": "^3.8.4"
+    "yt-search": "^2.12.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@types/jest": "^29.5.11",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-jsdoc": "^48.0.4",
+    "dprint": "^0.47.6",
+    "eslint": "^9.16.0",
+    "eslint-plugin-jest": "^28.9.0",
+    "eslint-plugin-jsdoc": "^50.6.0",
+    "globals": "^15.13.0",
     "jest": "^29.5.0",
     "nodemon": "^3.0.1"
   },
